--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.379.0",
+    "markdown-to-jsx": "^7.4.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
